<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2003-2017 Monitise Group Limited. All Rights Reserved.
  ~
  ~ Save to the extent permitted by law, you may not use, copy, modify,
  ~ distribute or create derivative works of this material or any part
  ~ of it without the prior written consent of Monitise Group Limited.
  ~ Any reproduction of this material must contain this notice.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/sign_up_edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Username"/>

    <EditText
        android:id="@+id/sign_up_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Password"/>

    <Button
        android:id="@+id/sign_up_button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up!"/>




</LinearLayout>
